# alfred-bridge

./: .gitignore  Cargo.toml  LICENSE-APACHE  MIT-LICENSE  README.md
.github/workflows/: ci.yml
src/: environment.rs  file_type.rs  icon.rs  item.rs  lib.rs  variable.rs
src/snapshots/: alfred_bridge__item__tests__health_check.snap  alfred_bridge__item__tests__icon.snap  alfred_bridge__item__tests__num_of_arg.snap  alfred_bridge__tests__iter_items.snap  alfred_bridge__tests__output.snap  alfred_bridge__tests__output_required_only.snap
