[package]
name = "alfred-bridge"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "3.11.0"
typed-builder = "0.23.0"

[dev-dependencies]
indexmap = { version = "2.7.0", features = ["serde"] }
insta = { version = "1.41.1", features = ["json"] }
